--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     outline: 0;
 }
+
+
 body{
     background-color: black;
 
@@ -13,12 +15,11 @@ main.log{
 
 }
 
-main.index{
-display: flex;
-position: absolute;
-top: 400px;
-left: 700px;
-
+main.index img{
+    display: flex;
+    position: absolute;
+    top: 400px;
+    left: 700px;
 }
 
 #username{
@@ -40,6 +41,7 @@ width: 46.7cap;
     height: 4.5cap;
     width: 46.7cap;
 }
+
 
 main.menu1{
 display: flex;
@@ -107,6 +109,7 @@ main.loginbase section main.atr img{
 }
 
 #agi{
+    position: absolute;
     font-size: 5cap;
     text-align: center;
     top: 107px;
@@ -114,6 +117,7 @@ main.loginbase section main.atr img{
 }
 
 #int{
+    position: absolute;
     font-size: 5cap;
     text-align: center;
     top: 223px;
@@ -121,6 +125,7 @@ main.loginbase section main.atr img{
 }
 
 #vig{
+    position: absolute;
     font-size: 5cap;
     text-align: center;
     top: 404px;
@@ -128,6 +133,7 @@ main.loginbase section main.atr img{
 }
 
 #pre{
+    position: absolute;
     font-size: 5cap;
     text-align: center;
     top: 404px;
@@ -135,6 +141,7 @@ main.loginbase section main.atr img{
 }
 
 #for{
+    position: absolute;
     font-size: 5cap;
     text-align: center;
     top: 223px;
@@ -142,6 +149,7 @@ main.loginbase section main.atr img{
 }
 
 #name{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -149,6 +157,7 @@ main.loginbase section main.atr img{
     left: 248px;
 }
 #description{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -156,6 +165,7 @@ main.loginbase section main.atr img{
     left: 248px;
 }
 #pericias{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -165,6 +175,7 @@ main.loginbase section main.atr img{
     height: 438px;
 }
 #ap{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -174,6 +185,7 @@ main.loginbase section main.atr img{
     height:360px;
 }
 #am{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -183,6 +195,7 @@ main.loginbase section main.atr img{
     height:360px;
 }
 #inv{
+    position: absolute;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     overflow: hidden;
     border-right: 1px solid;
@@ -231,4 +244,3 @@ main.loginbase section main.ritus div img{
   }
   
   @keyframes blik {0% {opacity: 0;}50% {opacity: 1;}51% {opacity: 0;}100% {opacity: 1;}}
-  
